Upload CSV Files

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -97,7 +97,7 @@
             data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Available appliances:</h6>
-                <a class="collapse-item" href="/appliance/washingmachine">Washing machine</a>
+                <a class="collapse-item" href="/appliance/washingmachine">Washing Machine</a>
                 <a class="collapse-item" href="/appliance/dishwasher">Dish Washer</a>
                 <a class="collapse-item" href="/appliance/cooker">Cooker</a>
                 <a class="collapse-item" href="/appliance/kettle">Kettle</a>
