--- a/app/templates/appliance.html
+++ b/app/templates/appliance.html
@@ -2,24 +2,117 @@
 
 {% block content %}
 
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <div style="margin-left: 50px;">
-        <h1 class="h3 ">
-            This is page will have to define the following for the {{appliance_name}}, <br/><br/>
+<div class="container-fluid">
 
-            <p style="margin-left: 10px;margin-right: 10px;">
+    <!-- Page Heading -->
+    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+        <h1 class="h3 mb-0 text-gray-800">{{appliance_name}} {{upload_path}}</h1>
+
+        <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                class="fas fa-upload fa-sm text-white-50"></i>Upload new data</a> -->
+
+        <form id="upload-form" action="/appliance/{{appliance_name}}" method="post" enctype="multipart/form-data">
+            <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" onclick="document.getElementById('file').click(); return false">
+                <i class="fas fa-upload fa-sm text-white-50"></i>Upload new data</a>
+            <input type="file" name="file" id="file" style="display: none;" onchange="document.getElementById('upload-form').submit();">
+            <input type="submit" value="Upload" style="display: none;">
+        </form>
+                
+                
+
+    </div>
+
+    
+
+
+    <!-- Content Row -->
+    <div class="row">
+
+        <!-- Earnings (Monthly) Card Example -->
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                Average Consumption (Monthly)</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">2.6 KWh</div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Earnings (Monthly) Card Example -->
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-success shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                Bills (Annual)</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Content Row -->
+
+    <div class="row">
+
+        <!-- Area Chart -->
+        <div class="col-xl-8 col-lg-7">
+            <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div
+                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                    <h6 class="m-0 font-weight-bold text-primary">History of Power consumption</h6>
+                    <div class="dropdown no-arrow">
+                        <!-- <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                        </a> -->
+                        <!-- <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                            aria-labelledby="dropdownMenuLink">
+                            <div class="dropdown-header">Dropdown Header:</div>
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div> -->
+                    </div>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                    <div class="chart-area">
+                        <canvas id="myAreaChart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+</div>
+
+{% endblock %}
+
+
+  <!-- <p style="margin-left: 10px;margin-right: 10px;">
 
                 1. Allow to upload a csv file of the aggregate power <br/>
                 2. Transfer it to the  backen to be preprocessed then disaggregated <br/>
                 3. Plot the output of the model in JS plot <br/>
 
-            </p>
-        
-
-        </h1>
-
-    </div>
-    
-</div>
-
-{% endblock %}
+            </p> -->
