--- a/app/templates/appliance.html
+++ b/app/templates/appliance.html
@@ -6,14 +6,14 @@
 
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">{{appliance_name}} {{upload_path}}</h1>
+        <h1 class="h3 mb-0 text-gray-800">{{appliance_title}}</h1>
 
         <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                 class="fas fa-upload fa-sm text-white-50"></i>Upload new data</a> -->
 
         <form id="upload-form" action="/appliance/{{appliance_name}}" method="post" enctype="multipart/form-data">
             <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" onclick="document.getElementById('file').click(); return false">
-                <i class="fas fa-upload fa-sm text-white-50"></i>Upload new data</a>
+                <i class="fas fa-upload fa-sm text-white-50"></i>Upload data</a>
             <input type="file" name="file" id="file" style="display: none;" onchange="document.getElementById('upload-form').submit();">
             <input type="submit" value="Upload" style="display: none;">
         </form>
@@ -36,7 +36,7 @@
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                                 Average Consumption (Monthly)</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">2.6 KWh</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{avg_conumption}} KWh</div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -54,7 +54,7 @@
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                 Bills (Annual)</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">€ {{bills_anno}}</div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -75,26 +75,19 @@
                 <!-- Card Header - Dropdown -->
                 <div
                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold text-primary">History of Power consumption</h6>
-                    <div class="dropdown no-arrow">
-                        <!-- <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                        </a> -->
-                        <!-- <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                            aria-labelledby="dropdownMenuLink">
-                            <div class="dropdown-header">Dropdown Header:</div>
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div> -->
-                    </div>
+                    <h6 class="m-0 font-weight-bold text-primary">History of Power consumption </h6>
+                    
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
                     <div class="chart-area">
-                        <canvas id="myAreaChart"></canvas>
+                        <canvas id="Consumption_History"></canvas>
+                        <script type="text/javascript">
+                            var labels = {{ hist_lables|tojson|safe }};
+                            var data = {{ hist_data|tojson|safe }};
+                        </script>
+                        <script src="{{ url_for('static', filename='js/chart-area.js') }}"></script>
+
                     </div>
                 </div>
             </div>
