--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -218,6 +218,10 @@
                 <img class="img-profile rounded-circle"
                     src="{{url_for('static',filename='img/undraw_profile.svg')}}">
             </a>
+            <!-- <form action="/loggedonuser" method="POST">
+                <input type="text" id="userid" name={{g.user.get_id()}}>
+                <input type="submit" value="Submit">
+            </form> -->
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                 aria-labelledby="userDropdown">
