--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -24,7 +24,7 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                                     Average Consumption (Monthly)</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">2.6 KWh</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">{{avg_conumption}} KWh</div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -42,7 +42,7 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                     Bills (Annual)</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">€ {{bills_anno}}</div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -110,11 +110,19 @@
                         </div>
                     </div>
                     <!-- Card Body -->
-                    <div class="card-body">
-                        <div class="chart-area">
-                            <canvas id="myAreaChart"></canvas>
-                        </div>
+                <div class="card-body">
+                    <div class="chart-area">
+                        <canvas id="Consumption_History"></canvas>
+                        <script type="text/javascript">
+                            var labels = {{ hist_lables|tojson|safe }};
+                            var data = {{ hist_data|tojson|safe }};
+                        </script>
+                        <script src="{{ url_for('static', filename='js/chart-area.js') }}"></script>
+
                     </div>
+                </div>
+
+
                 </div>
             </div>
 
@@ -144,6 +152,11 @@
                     <div class="card-body">
                         <div class="chart-pie pt-4 pb-2">
                             <canvas id="myPieChart"></canvas>
+                            <script type="text/javascript">
+                                // var labels = {{ pie_lables}};//|tojson|safe }};
+                                var data = {{ pie_values|tojson|safe }};
+                            </script>
+                            <script src="{{ url_for('static', filename='js/chart-pie-demo.js') }}"></script>
                         </div>
                         <div class="mt-4 text-center small">
                             <span class="mr-2">
@@ -153,7 +166,7 @@
                                 <i class="fas fa-circle text-success"></i> Fridge
                             </span>
                             <span class="mr-2">
-                                <i class="fas fa-circle text-info"></i> Dishwasher
+                                <i class="fas fa-circle text-info"></i> Microwave
                             </span>
                         </div>
                     </div>
