--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -3,24 +3,46 @@
 {% block content %}
 
 
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <div style="margin-left: 50px;">
-        <h1 class="h3 ">
-            This is page for a leaderboard <br/><br/>
 
-            <p style="margin-left: 10px;margin-right: 10px;">
+    <div class="container-fluid">
+        <!-- Page Heading -->
+        <div class="d-sm-flex align-items-center justify-content-between mb-4">
+            <h1 class="h3 mb-0 text-gray-800">Leaderboard</h1>
+        </div>
 
-                Your task here is to show a leader board for the user showing how much energy he is consuming/saving compared to other existing users in the 
-                platform. The aim here is to create competetion flavour in the platform and motivate further savings. 
-                You have the freedom to use whatever elements that you think may improve the savings.
-
-            </p>
-        
-
-        </h1>
-
+        <!-- Content Row -->
+        <div class="row">
+            <div class="col-12">
+                <div class="card shadow mb-4">
+                    <!-- Card Header - Dropdown -->
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                        <h6 class="m-0 font-weight-bold text-primary">User Rankings</h6>
+                    </div>
+                    <!-- Card Body -->
+                    <div class="card-body">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Rank</th>
+                                    <th scope="col">User ID</th>
+                                    <th scope="col">Average Consumption</th>
+                                    <th scope="col">Bills</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for user in leaderboard_data %}
+                                <tr style="{{ 'background-color: #d1ecf1; color: #0c5460;' if user.user_id == current_user_id else '' }}">
+                                    <th scope="row">{{ loop.index }}</th>
+                                    <td>User {{ user.user_id }}</td>
+                                    <td>{{ user.avg_consumption }} kWh</td>
+                                    <td>€ {{ user.bills }}</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    
-</div>
-
 {% endblock %}
