--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -99,10 +99,10 @@
             data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Available appliances:</h6>
-                <a class="collapse-item" href="/appliance/washingmachine">Washing Machine</a>
-                <a class="collapse-item" href="/appliance/fridge">Fridge</a>
-                <a class="collapse-item" href="/appliance/microwave">Microwave</a>
-                <a class="collapse-item" href="/appliance/kettle">Kettle</a>
+                <a class="collapse-item" href="/appliance/washingmachine/seq2point">Washing Machine</a>
+                <a class="collapse-item" href="/appliance/fridge/seq2point">Fridge</a>
+                <a class="collapse-item" href="/appliance/microwave/seq2point">Microwave</a>
+                <a class="collapse-item" href="/appliance/kettle/seq2point">Kettle</a>
             </div>
         </div>
     </li>
