--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -5,21 +5,38 @@
 
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <div style="margin-left: 50px;">
-        <h1 class="h3 ">
-            This is page for plotting historical data <br/><br/>
-
-            <p style="margin-left: 10px;margin-right: 10px;">
-
-                Your task here is to load the data from the database related to the active user and 
-                plot a history according to the specified period of time.
-
-            </p>
-        
-
-        </h1>
-
-    </div>
-    
+        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+    </div>  
 </div>
+
+
+<div class="row">
+    <!-- Area Chart -->
+    <div class="col-xl-8 col-lg-7">
+        <div class="card shadow mb-4">
+            <!-- Card Header - Dropdown -->
+            <div
+                class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h6 class="m-0 font-weight-bold text-primary">History of Power consumption</h6>
+                <div class="dropdown no-arrow">
+                </div>
+            </div>
+            <!-- Card Body -->
+        <div class="card-body">
+            <div class="chart-area">
+                <canvas id="Consumption_History"></canvas>
+                <script type="text/javascript">
+                    var labels = {{ hist_lables|tojson|safe }};
+                    var data = {{ hist_data|tojson|safe }};
+                </script>
+                <script src="{{ url_for('static', filename='js/chart-area.js') }}"></script>
+
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<!-- Content Row -->
 
 {% endblock %}
