--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,11 @@
 
     {% else %}
 
-    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <head>
+        <meta http-equiv="refresh" content="0; url=/dashboard">
+    </head>
+
+    <!-- <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <div style="margin-left: 50px;">
             <h1 class="h3 ">
                 Hello, <br/><br/>
@@ -58,7 +62,7 @@
     
         </div>
         
-    </div>
+    </div> -->
 
     {% endif %}
 
