--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,8 +32,10 @@
     <!-- Page level custom scripts -->
     <script src= "{{url_for('static',filename='js/demo/chart-area-demo.js')}}"></script>
     <script src= "{{url_for('static',filename='js/demo/chart-pie-demo.js')}}"></script>
+    <script src= "{{url_for('static',filename='js/demo/chart-bar-demo.js')}}"></script>
 
     <script src= "{{url_for('static',filename='js/chart-area.js')}}"></script>
+    <script src= "{{url_for('static',filename='js/chart-area-kwh.js')}}"></script>
     
 {% endblock %}
 
